# cosmos_px4_simulator

./: CMakeLists.txt  README.md  package.xml  setup.py
include/gazebo_px4_simulator/: WindPublisherPlugin.hh
launch/: plume_tracking.rviz  px4sim.launch  test.launch  tracking_rviz_visualization.launch
msg/: OdorReading.msg
odor_sim_assets/hws/: hmap.npz  nowhiff.h5  nowhiff_rescaled.h5  rescaled_hmap.npz  whiff.h5  whiff_rescaled.h5
odor_sim_assets/iris_color/: iris.sdf
odor_sim_assets/rigolli/: hmap.npz  nowhiff.h5  whiff.h5
odor_sim_assets/world/: mcmillan_airfield.world
scripts/: csv_trajectory.py  gazebo_px4_simulator.py  gazebo_px4_simulator_backup.py  gazebo_visualizer.py  offboard_px4_simulator.py  path_generator.py  plume_sim_fast.py  plume_tracking.py  plume_viz_node.py  surge_cast_position.py  surge_cast_vel.py  surge_cast_vel_with_stop.py  surge_vel_vicon.py  tracking_controller_node.py  tracking_controller_node_noisy.py  tracking_controller_node_wind.py  wind_bridge.py
src/: WindPublisherPlugin.cpp  WindSubscriberTest.cpp  visualize.ipynb
trajectories/: back_and_forth_CH_01.csv  sin_trajectory.csv  sin_trajectory_new.csv  square_path.csv  trajectory.csv
